[package]
name = "patreon"
version = "0.1.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["client", "http2", "runtime"] }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
serde = "1"
serde_json = "1"